--- a/index.html
+++ b/index.html
@@ -1,86 +1,78 @@
 <!DOCTYPE html>
 <head>
-  <title>Dylan Sturges Portfolio</title>
-  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" />
+  <title>Dylan Sturges</title>
   <link rel="stylesheet" type="text/css" href="styles.css" />
+  <link rel="apple-touch-icon-precomposed" sizes="57x57" href="images/apple-touch-icon-57x57.png" />
+  <link rel="apple-touch-icon-precomposed" sizes="114x114" href="images/apple-touch-icon-114x114.png" />
+  <link rel="apple-touch-icon-precomposed" sizes="72x72" href="images/apple-touch-icon-72x72.png" />
+  <link rel="apple-touch-icon-precomposed" sizes="144x144" href="images/apple-touch-icon-144x144.png" />
+  <link rel="apple-touch-icon-precomposed" sizes="60x60" href="images/apple-touch-icon-60x60.png" />
+  <link rel="apple-touch-icon-precomposed" sizes="120x120" href="images/apple-touch-icon-120x120.png" />
+  <link rel="apple-touch-icon-precomposed" sizes="76x76" href="images/apple-touch-icon-76x76.png" />
+  <link rel="apple-touch-icon-precomposed" sizes="152x152" href="images/apple-touch-icon-152x152.png" />
+  <link rel="icon" type="image/png" href="images/favicon-196x196.png" sizes="196x196" />
+  <link rel="icon" type="image/png" href="images/favicon-96x96.png" sizes="96x96" />
+  <link rel="icon" type="image/png" href="images/favicon-32x32.png" sizes="32x32" />
+  <link rel="icon" type="image/png" href="images/favicon-16x16.png" sizes="16x16" />
+  <link rel="icon" type="image/png" href="images/favicon-128.png" sizes="128x128" />
+  <meta name="application-name" content="&nbsp;"/>
+  <meta name="msapplication-TileColor" content="#FFFFFF" />
+  <meta name="msapplication-TileImage" content="mstile-144x144.png" />
+  <meta name="msapplication-square70x70logo" content="mstile-70x70.png" />
+  <meta name="msapplication-square150x150logo" content="mstile-150x150.png" />
+  <meta name="msapplication-wide310x150logo" content="mstile-310x150.png" />
+  <meta name="msapplication-square310x310logo" content="mstile-310x310.png" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
-<header class="masthead">
-
-</header>
 
 <body>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
-  </script>
-  <div id="nav">
-    <div class="navbar navbar-fixed-top navbar-static">
-      <div class="container">
-        <a class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-          <span class="glyphicon glyphicon-bar"></span>
-          <span class="glyphicon glyphicon-bar"></span>
-          <span class="glyphicon glyphicon-bar"></span>
-        </a>
-        <div class="navbar-collapse collapse">
-          <ul class="nav navbar-nav">
-            <li class="active"><a href="#Home" class="white nbb">Home</a></li>
-            <li class="divider"></li>
-            <li><a href="#Portfolio" class="white nbb">Portfolio</a></li>
-            <li><a href="#Contact" class="white nbb">Contact</a></li>
-          </ul>
-        </div>
-      </div>
+  <div id="header">
+    <div>
+      <img id="hello" alt="Dylan Sturges saying hello." src="images/IMG-4032.jpg"/>
+      <p id="name">Dylan Sturges</p>
+    </div>  
+  </div>
+  <div id="intro">
+    <div id="blurb">
+      <br /><br />Hey there! I'm Dylan Sturges, and I work for Learning & Development Strategy at <a href="https://2u.com/">2U, inc.</a> (They're a pretty cool company, check 'em out! I'm passionate about continuing education.)
+      I've studied computer science since I was a teenager, and web development for the past many years. This isn't what I do for my job right now, but it's fun to keep this stuff around. I'm familiar with a decent amount tools/languages for web development, I also know how to use Python and other object-oriented languagues that aren't quite so consistently used in web development.
     </div>
   </div>
-  <div class="container" id="Home">
-    <div class="container-fluid col-md-7" id="blurb">
-      <br /><br />I'm Dylan Sturges, a Web Developer who's a bit new to the scene. I'm familiar with a decent amount tools/languages for web development including: HTML, CSS, Javascript, JQuery, JSON API's, CMS's like Squarespace and Wordpress and... you get the idea, this list has gone on for too long already! I also know how to use Python and other object-oriented languagues that aren't quite so frequently used in web development.
-    </div>
-    <div class="container-fluid col-md-5">
-      <img src="https://scontent-lga3-1.xx.fbcdn.net/v/t1.0-9/18921656_10158776358625223_6909016401468195396_n.jpg?oh=94ed19f60c03c4e07ae45d4431581b0e&oe=5A046827" class="img-responsive img-rounded dylanpic" alt="Dylan Sturges">
-    </div>
-  </div>
-  <div class="container location" id="Portfolio">
-    <h2 class="text-center white"><br />Portfolio</h2>
-    <div class="container-fluid col-md-6">
+  <div id="Portfolio">
+    <h2 ><br />Portfolio</h2>
+    <h3>Some of these links may not work -- under construction!</h3>
+    <div id="unordered">
       <ul class="list-group">
-        <li class="list-group-item"><a href="http://www.larocquegumas.com/" target="_blank"><img src="https://image.ibb.co/mJwTS5/l_gscreen.jpg" class="img-responsive img-thumbnail" alt="Larocque+Gumas Website" title="Larocque+Gumas Website"></a></li>
-        <li class="list-group-item"><a href="https://fadetoblack72.github.io/Bruce-Dickinson-Tribute/" target="_blank"><img src="https://image.ibb.co/mjutuk/portfolio1.jpg" class="img-responsive img-thumbnail" alt="Bruce Dickinson Tribute" title="Bruce Dickinson Tribute"></a></li>
-        <li class="list-group-item"><a href="https://dl.dropboxusercontent.com/u/43714844/ToE/landingpage.html" target="_blank"><img src="https://image.ibb.co/eOKejk/portfolio3.jpg" class="img-responsive img-thumbnail" alt="Tower of Evil" title="Tower of Evil"></a></li>
-        <li class="list-group-item"><a href="https://fadetoblack72.github.io/Dylan-s-BBC/" target="_blank"><img src="https://image.ibb.co/cMLRVQ/portfolio5.jpg" class="img-responsive img-thumbnail" alt="BBC Site Imitation" title="BBC Site Imitation"></a></li>
+        <li class="list-item"><a href="http://www.larocquegumas.com/" target="_blank"><img src="https://image.ibb.co/mJwTS5/l_gscreen.jpg" class="img-port" alt="Larocque+Gumas Website" title="Larocque+Gumas Website"></a></li>
+        <li class="list-item"><a href="https://fadetoblack72.github.io/Bruce-Dickinson-Tribute/" target="_blank"><img src="https://image.ibb.co/mjutuk/portfolio1.jpg" class="img-port" alt="Bruce Dickinson Tribute" title="Bruce Dickinson Tribute"></a></li>
+        <li class="list-item"><a href="https://dl.dropboxusercontent.com/u/43714844/ToE/landingpage.html" target="_blank"><img src="https://image.ibb.co/eOKejk/portfolio3.jpg" class="img-port" alt="Tower of Evil" title="Tower of Evil"></a></li>
+        <li class="list-item"><a href="https://fadetoblack72.github.io/Dylan-s-BBC/" target="_blank"><img src="https://image.ibb.co/cMLRVQ/portfolio5.jpg" class="img-port" alt="BBC Site Imitation" title="BBC Site Imitation"></a></li>
+        <li class="list-item"><a href="https://fadetoblack72.github.io/Pomodoro-Clock/" target="_blank"><img src="https://image.ibb.co/igByuk/pomodoroscreen.jpg" class="img-port" alt="Pomodoro Clock" title="Pomodoro Clock"></a></li>
+        <li class="list-item"><a href="https://fadetoblack72.github.io/Site-Scratchpad/" target="_blank"><img src="https://image.ibb.co/e9GZ0Q/portfolio2.jpg" class="img-port" alt="Site Scratchpad" title="Site Scratchpad"></a></li>
+        <li class="list-item"><a href="https://fadetoblack72.github.io/Game/" target="_blank"><img src="https://image.ibb.co/hkkbVQ/portfolio4.jpg" class="img-port" alt="Reaction Test Game" title="Reaction Test Game"></a></li>
+        <li class="list-item"><a href="https://fadetoblack72.github.io/About-Iron-Maiden/" target="_blank"><img src="https://image.ibb.co/ifD5qQ/portfolio6.jpg" class="img-port" alt="Iron Maiden Tribute" title="Iron Maiden Tribute"></a></li>
       </ul>
     </div>
-    <div class="container-fluid col-md-6">
-      <ul class="list-group">
-        <li class="list-group-item"><a href="https://fadetoblack72.github.io/Pomodoro-Clock/" target="_blank"><img src="https://image.ibb.co/igByuk/pomodoroscreen.jpg" class="img-responsive img-thumbnail" alt="Pomodoro Clock" title="Pomodoro Clock"></a></li>
-        <li class="list-group-item"><a href="https://fadetoblack72.github.io/Site-Scratchpad/" target="_blank"><img src="https://image.ibb.co/e9GZ0Q/portfolio2.jpg" class="img-responsive img-thumbnail" alt="Site Scratchpad" title="Site Scratchpad"></a></li>
-        <li class="list-group-item"><a href="https://fadetoblack72.github.io/Game/" target="_blank"><img src="https://image.ibb.co/hkkbVQ/portfolio4.jpg" class="img-responsive img-thumbnail" alt="Reaction Test Game" title="Reaction Test Game"></a></li>
-        <li class="list-group-item"><a href="https://fadetoblack72.github.io/About-Iron-Maiden/" target="_blank"><img src="https://image.ibb.co/ifD5qQ/portfolio6.jpg" class="img-responsive img-thumbnail" alt="Iron Maiden Tribute" title="Iron Maiden Tribute"></a></li>
-      </ul>
-    </div>
-  </div>
-  <div class="container location" id="Contact">
+  <div id="Contact">
     <h1 class="text-center white"><br />Contact</h1>
-    <div class="container-fluid col-md-9">
-      <h2 class="text-center white">Contact Dylan Sturges at: <br />
+    <div id="contactinfo">
+      <h2>Contact Dylan Sturges at: <br />
         <a href="mailto:dylansturges@gmail.com" target="_blank">dylansturges@gmail.com</a>
       </h2>
     </div>
-    <div class="container-fluid col-md-3">
-      <ul class="list-inline center-block text-center">
-        <li class="" id="endlist">
-          <a href="https://github.com/fadetoblack72" target="_blank"><img src="https://image.flaticon.com/icons/svg/25/25231.svg" class="img-responsive bottomIcon" /></a>
+    <div id="social">
+      <ul>
+        <li id="endlist">
+          <a href="https://github.com/fadetoblack72" target="_blank"><img src="https://image.flaticon.com/icons/svg/25/25231.svg"/></a>
         </li>
-        <li class="list-group-item" id="endlist">
-          <a href="https://twitter.com/d_sturges" target="_blank"><img src="http://www.iconsdb.com/icons/preview/gray/twitter-xxl.png" class="img-responsive bottomIcon" /></a>
+        <li id="endlist">
+          <a href="https://www.linkedin.com/in/dylan-sturges-111a71146/" target="_blank"><img src="images/61109.png" /></a>
+        </li>
+        <li id="endlist">
+          <a href="https://twitter.com/d_sturges" target="_blank"><img src="images/124021.png"/></a>
         </li>
       </ul>
     </div>
-  </div>
-  <div class="container">
-    <p id="bottomlinks">
-    <a href="#Home" class="white">Home</a>
-    <a href="#Portfolio" class="white">Portfolio</a>
-    <a href="#Contact" class="white">Contact</a>
-    </p>
   </div>
   <script src="scripts.js">
   </script>
